// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox 1`] = `
<style>
  .input-checkbox-main {
  display: grid;
  gap: 2rem;
}
.input-checkbox-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1rem;
}
.input-checkbox-heading {
  grid-column: 1 / -1;
}
</style>
<div>
  <div data-size="sm">
    <h2 data-size="2xs">
      Small
    </h2>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="checkbox"
        name="sm-default"
        id="<generated>"
      >
      <label for="<generated>">
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="checkbox"
        checked
        name="sm-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        data-indeterminate="true"
        type="checkbox"
        name="sm-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        type="checkbox"
        name="sm-disabled"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        type="checkbox"
        checked
        name="sm-disabled-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        data-indeterminate="true"
        type="checkbox"
        name="sm-disabled-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        type="checkbox"
        name="sm-invalid"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        type="checkbox"
        checked
        name="sm-invalid-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        data-indeterminate="true"
        type="checkbox"
        name="sm-invalid-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        type="checkbox"
        name="sm-read-only"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        type="checkbox"
        checked
        name="sm-read-only-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        data-indeterminate="true"
        type="checkbox"
        name="sm-read-only-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div data-size="md">
    <h2 data-size="2xs">
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="checkbox"
        name="md-default"
        id="<generated>"
      >
      <label for="<generated>">
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="checkbox"
        checked
        name="md-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        data-indeterminate="true"
        type="checkbox"
        name="md-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        type="checkbox"
        name="md-disabled"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        type="checkbox"
        checked
        name="md-disabled-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        data-indeterminate="true"
        type="checkbox"
        name="md-disabled-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        type="checkbox"
        name="md-invalid"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        type="checkbox"
        checked
        name="md-invalid-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        data-indeterminate="true"
        type="checkbox"
        name="md-invalid-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        type="checkbox"
        name="md-read-only"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        type="checkbox"
        checked
        name="md-read-only-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        data-indeterminate="true"
        type="checkbox"
        name="md-read-only-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div data-size="lg">
    <h2 data-size="2xs">
      Large
    </h2>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="checkbox"
        name="lg-default"
        id="<generated>"
      >
      <label for="<generated>">
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        type="checkbox"
        checked
        name="lg-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        data-indeterminate="true"
        type="checkbox"
        name="lg-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        type="checkbox"
        name="lg-disabled"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        type="checkbox"
        checked
        name="lg-disabled-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        disabled
        data-indeterminate="true"
        type="checkbox"
        name="lg-disabled-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        type="checkbox"
        name="lg-invalid"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        type="checkbox"
        checked
        name="lg-invalid-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        aria-invalid="true"
        data-indeterminate="true"
        type="checkbox"
        name="lg-invalid-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        type="checkbox"
        name="lg-read-only"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        type="checkbox"
        checked
        name="lg-read-only-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        readonly
        data-indeterminate="true"
        type="checkbox"
        name="lg-read-only-indeterminate"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<style>
  .input-controlled-main {
          display: flex;
          gap: var(--ds-size-2);
          align-items: end;
          width: 100%;
        }
</style>
<div>
  <div>
    <ds-field>
      <label for="<generated>">
        Skriv inn verdi
      </label>
      <input
        type="text"
        value
        id="<generated>"
      >
    </ds-field>
    <button
      data-variant="secondary"
      type="button"
    >
      Tøm feltet
    </button>
  </div>
</div>
`;

exports[`Html Size 1`] = `
<ds-field>
  <label for="<generated>">
    Input with size
  </label>
  <input
    size="10"
    type="text"
    id="<generated>"
  >
</ds-field>
`;

exports[`Input Types 1`] = `
<ds-field data-clickdelegatefor="<generated>">
  <label for="<generated>">
    Checkbox
  </label>
  <input
    type="checkbox"
    id="<generated>"
  >
</ds-field>
<ds-field data-clickdelegatefor="<generated>">
  <label for="<generated>">
    Radio
  </label>
  <input
    type="radio"
    id="<generated>"
  >
</ds-field>
<ds-field data-clickdelegatefor="<generated>">
  <label for="<generated>">
    Switch
  </label>
  <input
    role="switch"
    type="checkbox"
    id="<generated>"
  >
</ds-field>
`;

exports[`Preview 1`] = `
<input
  aria-label="input"
  type="text"
  name="inputs"
>
`;

exports[`Radio 1`] = `
<style>
  .input-radio-main {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
  max-width: 90vw;
}
.input-radio-heading {
  grid-column: 1 / -1;
  margin-top: 16px;
}
</style>
<div data-size="sm">
  <h2 data-size="2xs">
    Small
  </h2>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      name="sm-Default"
      id="<generated>"
    >
    <label for="<generated>">
      Default
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      checked
      name="sm-Checked"
      id="<generated>"
    >
    <label for="<generated>">
      Checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      name="sm-Disabled"
      id="<generated>"
    >
    <label for="<generated>">
      Disabled
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      checked
      name="sm-Disabled"
      id="<generated>"
    >
    <label for="<generated>">
      Disabled checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-invalid="true"
      type="radio"
      name="sm-Invalid"
      id="<generated>"
    >
    <label for="<generated>">
      Invalid
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-invalid="true"
      type="radio"
      checked
      name="sm-Invalid"
      id="<generated>"
    >
    <label for="<generated>">
      Invalid checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      name="sm-Read-only"
      id="<generated>"
    >
    <label for="<generated>">
      Read-only
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      checked
      name="sm-Read-only"
      id="<generated>"
    >
    <label for="<generated>">
      Read-only checked
    </label>
  </ds-field>
</div>
<div data-size="md">
  <h2 data-size="2xs">
    Medium
  </h2>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      name="md-Default"
      id="<generated>"
    >
    <label for="<generated>">
      Default
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      checked
      name="md-Checked"
      id="<generated>"
    >
    <label for="<generated>">
      Checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      name="md-Disabled"
      id="<generated>"
    >
    <label for="<generated>">
      Disabled
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      checked
      name="md-Disabled"
      id="<generated>"
    >
    <label for="<generated>">
      Disabled checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-invalid="true"
      type="radio"
      name="md-Invalid"
      id="<generated>"
    >
    <label for="<generated>">
      Invalid
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-invalid="true"
      type="radio"
      checked
      name="md-Invalid"
      id="<generated>"
    >
    <label for="<generated>">
      Invalid checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      name="md-Read-only"
      id="<generated>"
    >
    <label for="<generated>">
      Read-only
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      checked
      name="md-Read-only"
      id="<generated>"
    >
    <label for="<generated>">
      Read-only checked
    </label>
  </ds-field>
</div>
<div data-size="lg">
  <h2 data-size="2xs">
    Large
  </h2>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      name="lg-Default"
      id="<generated>"
    >
    <label for="<generated>">
      Default
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="radio"
      checked
      name="lg-Checked"
      id="<generated>"
    >
    <label for="<generated>">
      Checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      name="lg-Disabled"
      id="<generated>"
    >
    <label for="<generated>">
      Disabled
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="radio"
      checked
      name="lg-Disabled"
      id="<generated>"
    >
    <label for="<generated>">
      Disabled checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-invalid="true"
      type="radio"
      name="lg-Invalid"
      id="<generated>"
    >
    <label for="<generated>">
      Invalid
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-invalid="true"
      type="radio"
      checked
      name="lg-Invalid"
      id="<generated>"
    >
    <label for="<generated>">
      Invalid checked
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      name="lg-Read-only"
      id="<generated>"
    >
    <label for="<generated>">
      Read-only
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="radio"
      checked
      name="lg-Read-only"
      id="<generated>"
    >
    <label for="<generated>">
      Read-only checked
    </label>
  </ds-field>
</div>
`;

exports[`Switch 1`] = `
<style>
  .input-switch-main {
  display: grid;
  gap: 2rem;
}
.input-switch-section {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
  max-width: 90vw;
}
.input-switch-heading {
  grid-column: 1 / -1;
}
</style>
<div>
  <div data-size="sm">
    <h2 data-size="2xs">
      Small
    </h2>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        type="checkbox"
        name="sm-default"
        id="<generated>"
      >
      <label for="<generated>">
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        type="checkbox"
        checked
        name="sm-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        disabled
        type="checkbox"
        name="sm-disabled"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        disabled
        type="checkbox"
        checked
        name="sm-disabled-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        readonly
        type="checkbox"
        name="sm-read-only"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        readonly
        type="checkbox"
        checked
        name="sm-read-only-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div data-size="md">
    <h2 data-size="2xs">
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        type="checkbox"
        name="md-default"
        id="<generated>"
      >
      <label for="<generated>">
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        type="checkbox"
        checked
        name="md-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        disabled
        type="checkbox"
        name="md-disabled"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        disabled
        type="checkbox"
        checked
        name="md-disabled-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        readonly
        type="checkbox"
        name="md-read-only"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        readonly
        type="checkbox"
        checked
        name="md-read-only-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div data-size="lg">
    <h2 data-size="2xs">
      Large
    </h2>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        type="checkbox"
        name="lg-default"
        id="<generated>"
      >
      <label for="<generated>">
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        type="checkbox"
        checked
        name="lg-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        disabled
        type="checkbox"
        name="lg-disabled"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        disabled
        type="checkbox"
        checked
        name="lg-disabled-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        readonly
        type="checkbox"
        name="lg-read-only"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<generated>">
      <input
        role="switch"
        readonly
        type="checkbox"
        checked
        name="lg-read-only-checked"
        id="<generated>"
      >
      <label for="<generated>">
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Text 1`] = `
<style>
  .input-text-main {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1rem;
  max-width: 90vw;
}
.input-text-heading {
  grid-column: 1 / -1;
}
</style>
<div data-size="sm">
  <h2 data-size="2xs">
    Small
  </h2>
  <ds-field>
    <label for="<generated>">
      Default
    </label>
    <input
      data-size="sm"
      type="text"
      value="Value"
      name="sm-default"
      id="<generated>"
    >
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Disabled
    </label>
    <input
      disabled
      data-size="sm"
      type="text"
      value="Value"
      name="sm-disabled"
      id="<generated>"
    >
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Invalid
    </label>
    <input
      data-size="sm"
      type="text"
      value="Value"
      name="sm-invalid"
      id="<generated>"
      aria-describedby="<generated>"
      aria-invalid="true"
    >
    <p
      data-field="validation"
      id="<generated>"
    >
      Feilmelding
    </p>
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Read-only
    </label>
    <input
      readonly
      data-size="sm"
      type="text"
      value="Value"
      name="sm-read-only"
      id="<generated>"
    >
  </ds-field>
</div>
<div data-size="md">
  <h2 data-size="2xs">
    Medium
  </h2>
  <ds-field>
    <label for="<generated>">
      Default
    </label>
    <input
      data-size="md"
      type="text"
      value="Value"
      name="md-default"
      id="<generated>"
    >
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Disabled
    </label>
    <input
      disabled
      data-size="md"
      type="text"
      value="Value"
      name="md-disabled"
      id="<generated>"
    >
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Invalid
    </label>
    <input
      data-size="md"
      type="text"
      value="Value"
      name="md-invalid"
      id="<generated>"
      aria-describedby="<generated>"
      aria-invalid="true"
    >
    <p
      data-field="validation"
      id="<generated>"
    >
      Feilmelding
    </p>
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Read-only
    </label>
    <input
      readonly
      data-size="md"
      type="text"
      value="Value"
      name="md-read-only"
      id="<generated>"
    >
  </ds-field>
</div>
<div data-size="lg">
  <h2 data-size="2xs">
    Large
  </h2>
  <ds-field>
    <label for="<generated>">
      Default
    </label>
    <input
      data-size="lg"
      type="text"
      value="Value"
      name="lg-default"
      id="<generated>"
    >
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Disabled
    </label>
    <input
      disabled
      data-size="lg"
      type="text"
      value="Value"
      name="lg-disabled"
      id="<generated>"
    >
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Invalid
    </label>
    <input
      data-size="lg"
      type="text"
      value="Value"
      name="lg-invalid"
      id="<generated>"
      aria-describedby="<generated>"
      aria-invalid="true"
    >
    <p
      data-field="validation"
      id="<generated>"
    >
      Feilmelding
    </p>
  </ds-field>
  <ds-field>
    <label for="<generated>">
      Read-only
    </label>
    <input
      readonly
      data-size="lg"
      type="text"
      value="Value"
      name="lg-read-only"
      id="<generated>"
    >
  </ds-field>
</div>
`;
